2013-06-02  Araki Ken  <arakiken@users.sf.net>

	* fb/x_font.c, etc/font-fb: The default fonts of ISO10646_UCS4_1 and
	  ISO8859_1_R are not defined in etc/font-fb but in fb/x_font.c.

	* x_screen_manager.c: Error messages in the failure of x_font_manager_new()
	  are simplified.

	* x_font_config.[ch]: x_get_charset_name() is added.

	* xlib/x_window.c: The type for 32-bit format data of XChangeProperty()
	  is changed to u_long. (SF Bug #3614192)

	* kiklib/src/Makefile.in: 14.3 -> 15.0 (SF Bug #3614142)

2013-06-01  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.[ch], x_window.c, x_im_{candidate|status}_screen.[ch]:
	  Input method window on framebuffer is improved.

	* fb/x_display.c: Segfault in closing input method status window
	  is fixed.

	* x_screen_manager.c: Minor fixes.

2013-05-29  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/x_display.c, main_loop.c: Minor fixes.

2013-05-28  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Segfault in x_font_t::x_off > 0 is fixed.
	  (Thanks to @tsutsuii san)

2013-05-27  Araki Ken  <arakiken@users.sf.net>

	* main_loop.c: "fb_resolution" option is added for OpenBSD framebuffer.

	* fb/x_display.c: OpenBSD support is added.

	* etc/font-fb: JISC6226_1978, JISX0208_1990 and JISX0213_2000_1
	  are defiend as &JISX0208_1983.

	* mkf_ucs4_map.c: mkf_map_ucs4_to_jisx0213_2000_1 is not cached
	  in mkf_map_ucs4_to() to prefer JISX0208 to JISX0213 all the time.

	* version.h.in: 3.2.0 -> 3.2.0 post

2013-05-26  Araki Ken  <arakiken@users.sf.net>

	* 3.2.0 released.
	  (tag "rel-3_2_0")

	* configure.in, mlterm.spec, main/version.h.in,
	  doc/en/ReleaseNote: updated for 3.2.0.

	* kiklib/src/Makefile.in, mkf/lib/Makefile.in: Fixes for SunOS make.

	* win32/x_window.c: Compilation error on msys-dtk is fixed.

	* win32/x.h: Minor fixes.

	* fb/x_display.c:
	  - ENABLE_2_4_PPB is added. 2 and 4 ppb are disabled by default.